fix: link text-decoration style on mobile (isunjn/serene@f50ae80)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -67,10 +67,16 @@ body {
 
   a {
     color: var(--primary-color);
-    text-decoration: underline var(--primary-pale-color) 1.5px;
+    text-decoration-color: underline var(--primary-pale-color);
+    text-decoration-thickness: 1.5px;
 
     &:hover {
       text-decoration-color: var(--primary-color);
+    }
+
+    @media (max-width: 425px) {
+      text-decoration-color: unset;
+      text-decoration-thickness: auto;
     }
   }
 
